# mechanics-roster-optimization

./: .flake8  .gitignore  CONTRIBUTING.md  MIGRATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  app.py  base_aircraft_schedule.xlsx  cost_matrix.xlsx  example_usage.py  mechanic_skills_dataset.xlsx  operations_research.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_app.bat  run_app.sh  setup.py
.github/workflows/: ci.yml
data/: avoidance_list.xlsx  base_aircraft_schedule.xlsx  mechanic_skills_dataset.xlsx  roster_output.xlsx  sample_output.xlsx
notebooks/: mechanics_roster_optimization_dist_cost.ipynb
src/mechanics_roster/: __init__.py  app.py  config.py  data_loader.py  excel_generator.py  optimizer.py
tests/: __init__.py  conftest.py  test_config.py  test_data_loader.py  test_optimizer.py
